# VerzoekjesBever

./: .dockerignore  .example.env  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.build.yml  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.github/workflows/: docker.yml
docs/superpowers/plans/: 2026-05-29-verzoekjesbever.md
docs/superpowers/specs/: 2026-05-29-verzoekjesbever-design.md
src/: adem_mode.py  config.py  deps.py  keyed_list.py  load_test_utils.py  log_config.py  main.py  models.py  party_service.py  persistence.py  spotify_client.py  util.py
src/pages/: audience.py  benchmark.py  dj.py  login.py  spotify_auth.py  startup.py
src/static/: audience-scroll.css  audience-scroll.js  beaver-animation.css  beaver-animation.js
tests/: test_audience_vms.py  test_config.py  test_dj_vms.py  test_keyed_list.py  test_load.py  test_models.py  test_party_service.py  test_persistence.py  test_spotify_auth.py
