[project]
name = "verzoekjesbever"
version = "0.1.0"
description = "Party song request app: manage Spotify playlists with a DJ interface and audience beamer display"
requires-python = ">=3.12"
dependencies = [
    "spotipy>=2.26.0",
    "nicegui>=2.20.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "segno>=1.6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-assume>=2.4.3",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
markers = [
    "load: load/performance benchmark tests",
]
